remove list all figures
